--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1" ,"clsx": "^2.1.1",    "prettier": "^3.3.3",    "react-countup": "^6.5.3",    "react-scroll": "^1.9.0",    "react-slidedown": "^2.4.7"
+
+
+
+
   },
+  
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
